[package]
name = "tidb_pool"
version = "0.1.2"
description = "A Rust crate that creates a MySQL connection pool for TiDB using a TOML configuration file."
license = "MIT"
repository = "https://github.com/your-username/tidb_pool"
homepage = "https://github.com/your-username/tidb_pool"
documentation = "https://docs.rs/tidb_pool"
readme = "README.md"
keywords = ["tidb", "mysql", "pool", "connection", "sqlx"]
categories = ["database", "asynchronous", "network-programming"]
edition = "2021"
authors = ["Rust Latam <rust.lang.latam@gmail.com>"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "chrono", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"

[dev-dependencies]
toml = "0.8.19" # For testing deserialization from TOML files

