[package]
name = "tidb_pool"
version = "0.1.4"
description = "A Rust crate that creates a MySQL connection pool for TiDB using a TOML configuration file."
license = "MIT"
repository = "https://github.com/RustLangLatam/tidb-pool"
documentation = "https://docs.rs/tidb_pool"
readme = "README.md"
keywords = ["tidb", "mysql", "pool", "connection", "sqlx"]
categories = ["database", "asynchronous", "network-programming"]
edition = "2021"
authors = ["Rust Latam <rust.lang.latam@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["mysql", "chrono", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"

[dev-dependencies]
toml = "0.8.20" # For testing deserialization from TOML files

